Padding decreased to avoid unnecessary scrollbar on small screens.

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,14 +3,14 @@
 }
 
 main {
-  height: calc(100vh - 10rem);
+  height: calc(100vh - 6rem);
   width: 100%;
   overflow-y: auto;
   overflow-x: hidden;
   padding-top: 5rem;
   padding-left: 3rem;
   padding-right: 3rem;
-  padding-bottom: 5rem;
+  padding-bottom: 1rem;
 }
 
 @media screen and (max-width: 768px) {
